@@ -29,6 +29,8 @@ var app = new Vue({
             if (IS_IOS) {
                 // Always add padding...
                 document.documentElement.style.setProperty('--bottom-nav-pad', '12px');
+                document.documentElement.style.setProperty('--bottom-progress-adjust', '4px');
+                document.documentElement.style.setProperty('--bottom-toolbar-pad', '4px');
             }
         }
         this.autoLayout = true;
