@@ -2,6 +2,7 @@
 -----
 1. Update traslations.
 2. Add track source (Spotify, Qobuz, etc.) to technical info.
+3. Slightly later metrics of desktop layout toolbar to help on iPad.
 
 2.8.2
 -----
